# scheduler

./: .gitignore  docker-stack.yml
.github/workflows/: auth_docker_publish.yml
auth_service/: Dockerfile  pyproject.toml
auth_service/app/: crud.py  dependencies.py  main.py  models.py  schemas.py
back/app/: main.py  models.py
